--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=forohub
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/forohub
+spring.datasource.username=root
+spring.datasource.password=kali
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace=never
